--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "grunt": "1.0.1",
-    "grunt-env": "0.4.4"
+    "grunt-env": "0.4.4",
+    "time-grunt": "1.4.0"
   }
 }
