--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "grunt": "1.0.1",
     "grunt-env": "0.4.4",
+    "jshint-stylish": "2.2.1",
     "time-grunt": "1.4.0"
   }
 }
