--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "grunt": "1.0.1",
+    "grunt-contrib-jshint": "1.0.0",
     "grunt-env": "0.4.4",
     "jshint-stylish": "2.2.1",
     "time-grunt": "1.4.0"
