--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt": "1.0.1",
     "grunt-contrib-jshint": "1.0.0",
     "grunt-env": "0.4.4",
+    "grunt-newer": "1.2.0",
     "jshint-stylish": "2.2.1",
     "time-grunt": "1.4.0"
   }
