--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-contrib-jshint": "1.0.0",
     "grunt-env": "0.4.4",
     "grunt-newer": "1.2.0",
+    "jit-grunt": "0.10.0",
     "jshint-stylish": "2.2.1",
     "time-grunt": "1.4.0"
   }
