--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt": "1.0.1",
     "grunt-contrib-jshint": "1.0.0",
     "grunt-env": "0.4.4",
+    "grunt-express-server": "0.5.3",
     "grunt-newer": "1.2.0",
     "jit-grunt": "0.10.0",
     "jshint-stylish": "2.2.1",
