--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "grunt": "1.0.1",
     "grunt-contrib-jshint": "1.0.0",
+    "grunt-contrib-watch": "1.0.0",
     "grunt-env": "0.4.4",
     "grunt-express-server": "0.5.3",
     "grunt-newer": "1.2.0",
