--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt-env": "0.4.4",
     "grunt-express-server": "0.5.3",
     "grunt-newer": "1.2.0",
+    "grunt-open": "0.2.3",
     "jit-grunt": "0.10.0",
     "jshint-stylish": "2.2.1",
     "time-grunt": "1.4.0"
