--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "my-fullstack-seed",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "1.5.8"
+    "angular": "1.5.8",
+    "angular-resource": "1.5.8"
   }
 }
