--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "1.5.8",
-    "angular-resource": "1.5.8"
+    "angular-resource": "1.5.8",
+    "angular-cookies": "1.5.8"
   }
 }
