--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "angular": "1.5.8",
     "angular-resource": "1.5.8",
-    "angular-cookies": "1.5.8"
+    "angular-cookies": "1.5.8",
+    "angular-sanitize": "1.5.8"
   }
 }
