--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "angular": "1.5.8",
     "angular-resource": "1.5.8",
     "angular-cookies": "1.5.8",
-    "angular-sanitize": "1.5.8"
+    "angular-sanitize": "1.5.8",
+    "angular-ui-router": "0.3.1"
   }
 }
