--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "grunt-contrib-watch": "1.0.0",
     "grunt-env": "0.4.4",
     "grunt-express-server": "0.5.3",
+    "grunt-injector": "1.0.1",
     "grunt-newer": "1.2.0",
     "grunt-open": "0.2.3",
     "jit-grunt": "0.10.0",
