--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "angular-resource": "1.5.8",
     "angular-cookies": "1.5.8",
     "angular-sanitize": "1.5.8",
-    "angular-ui-router": "0.3.1"
+    "angular-ui-router": "0.3.1",
+    "angular-material": "1.1.1"
   }
 }
