--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "grunt-express-server": "0.5.3",
     "grunt-injector": "1.0.1",
     "grunt-newer": "1.2.0",
+    "grunt-node-inspector": "0.4.2",
     "grunt-open": "0.2.3",
     "jit-grunt": "0.10.0",
     "jshint-stylish": "2.2.1",
