npm: Add dev dependency 'grunt-nodemon'
Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "grunt-injector": "1.0.1",
     "grunt-newer": "1.2.0",
     "grunt-node-inspector": "0.4.2",
+    "grunt-nodemon": "0.4.2",
     "grunt-open": "0.2.3",
     "jit-grunt": "0.10.0",
     "jshint-stylish": "2.2.1",
