--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "grunt": "1.0.1",
+    "grunt-concurrent": "2.3.1",
     "grunt-contrib-jshint": "1.0.0",
     "grunt-contrib-stylus": "1.2.0",
     "grunt-contrib-watch": "1.0.0",
